--- a/CrawlAndCount.ipynb
+++ b/CrawlAndCount.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -101,15 +101,51 @@
      "output_type": "stream",
      "text": [
       "2 日內 20 日線大於 60 日線，找波動比較大的\n",
-      "台塑(100.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1301\n",
-      "聯電(51.2): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2303\n",
-      "台積電(583.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2330\n",
-      "東元(33.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1504\n",
-      "0050(134.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=0050\n",
-      "富邦台50(77.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=006208\n",
+      "國巨(555.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2327\n",
+      "第一金(22.55): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2892\n",
+      "福懋(32.4): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1434\n",
+      "華通(41.8): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2313\n",
+      "和潤企業(87.4): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=6592\n",
       "2 日內 5 日線大於 20 日線，找波動比較大的\n",
-      "統一(72.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1216\n",
-      "廣達(87.1): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2382\n"
+      "統一(73.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1216\n",
+      "遠東新(31.9): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1402\n",
+      "正新(46.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2105\n",
+      "聯電(53.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2303\n",
+      "鴻海(111.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2317\n",
+      "廣達(86.9): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2382\n",
+      "可成(181.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2474\n",
+      "華南金(18.4): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2880\n",
+      "台新金(15.15): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2887\n",
+      "永豐金(13.75): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2890\n",
+      "中信金(22.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2891\n",
+      "大立光(3130.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=3008\n",
+      "中租-KY(202.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=5871\n",
+      "上海商銀(45.2): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=5876\n",
+      "寶成(37.65): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=9904\n",
+      "佳格(54.3): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1227\n",
+      "聚陽(269.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1477\n",
+      "華新(29.25): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1605\n",
+      "大成鋼(57.9): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2027\n",
+      "華邦電(34.1): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2344\n",
+      "佳世達(30.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2352\n",
+      "英業達(25.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2356\n",
+      "京元電子(42.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2449\n",
+      "創見(73.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2451\n",
+      "遠東銀(10.6): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2845\n",
+      "三商壽(9.35): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2867\n",
+      "瑞儀(121.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=6176\n",
+      "億豐(413.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=8464\n",
+      "巨大(322.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=9921\n",
+      "0056(34.8): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=0056\n",
+      "富邦台50(79.3): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=006208\n",
+      "國泰台灣5G+(17.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=00881\n",
+      "2021-06-29\n",
+      "# 20 日線的股票\n",
+      "台塑(104.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=1301\n",
+      "台達電(299.5): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2308\n",
+      "台積電(595.0): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2330\n",
+      "大同(25.3): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2371\n",
+      "京元電子(42.7): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2449\n"
      ]
     }
    ],
@@ -238,33 +274,32 @@
     "  \n",
     "        \n",
     "        \n",
-    "# # 今日剛突破 20 日線 & 前一天前還沒突破 & 今日成交量比 20 日平均高\n",
-    "# less20Before3Day = (price5[allStockList])[-2:-1].mean() < price20[allStockList].mean()\n",
-    "# is1Large20 = price1[allStockList].mean() > price20[allStockList].mean() \n",
-    "# is1VolumeLarge20 = valume1[allStockList].mean() > valume20[allStockList].mean() \n",
+    "# 今日剛突破 20 日線 & 前一天前還沒突破 & 今日成交量比 20 日平均高\n",
+    "less20Before3Day = (price5[allStockList])[-2:-1].mean() < price20[allStockList].mean()\n",
+    "is1Large20 = price1[allStockList].mean() > price20[allStockList].mean() \n",
+    "is1VolumeLarge20 = valume1[allStockList].mean() > valume20[allStockList].mean() \n",
     "\n",
-    "# breakthrough20StockList = is1Large20 & less20Before3Day \n",
+    "breakthrough20StockList = is1Large20 & less20Before3Day \n",
     "\n",
     "\n",
-    "# print(datetime.date.today())\n",
-    "# print(\"# 20 日線的股票\")\n",
-    "# for stockId in allStockList:\n",
-    "#     if(breakthrough20StockList[stockId]):\n",
-    "#         print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n"
+    "print(datetime.date.today())\n",
+    "print(\"# 20 日線的股票\")\n",
+    "for stockId in allStockList:\n",
+    "    if(breakthrough20StockList[stockId]):\n",
+    "        print(allStockList[stockId]+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-21\n",
+      "2021-06-29\n",
       "# KD 20 選股法\n",
-      "中信金(22.25): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2891\n",
       "End\n"
      ]
     }
@@ -307,14 +342,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2021-06-21\n",
+      "2021-06-29\n",
       "20 日線停損(跌破 20 日線＆低於買進價 10%)\n",
       "============================\n",
       "\n",
@@ -325,13 +360,12 @@
       "============================\n",
       "\n",
       "20 日線停利(移動式停利，高點跌下來 10%\n",
-      "2027(43.8): https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=2027\n",
       "============================\n",
       "\n",
       "kd 停利(KD 死亡交叉，K 大於 80)\n",
       "============================\n",
       "\n",
-      "投機停利(移動式停利，高點跌下來 10%)\n",
+      "投機停利(移動式停利，高點跌下來 20%)\n",
       "============================\n"
      ]
     }
@@ -421,9 +455,9 @@
     "\n",
     "\n",
     "print(\"\")\n",
-    "print(\"投機停利(移動式停利，高點跌下來 10%)\")\n",
+    "print(\"投機停利(移動式停利，高點跌下來 20%)\")\n",
     "for stockId in opportunisticStockPricePair:\n",
-    "    belowHighest10PercentPrice = price1[stockId].mean() < price20[stockId].max() * 0.9\n",
+    "    belowHighest10PercentPrice = price1[stockId].mean() < price20[stockId].max() * 0.8\n",
     "    if belowHighest10PercentPrice:\n",
     "        print(stockId+\"(\"+ str(price1[stockId].mean())+\"): \"+\"https://goodinfo.tw/StockInfo/StockDetail.asp?STOCK_ID=\" + stockId)\n",
     "print(\"============================\")    \n"
